# ida-cli

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: build.yml
3rd-github/idalib/: CHANGELOG.md  Cargo.toml  README.md  ida-plugin.json
3rd-github/idalib/examples/basic-plugin/: Cargo.toml
3rd-github/idalib/examples/basic-plugin/src/: lib.rs
3rd-github/idalib/idalib/: Cargo.toml
3rd-github/idalib/idalib-build/src/: lib.rs
3rd-github/idalib/idalib-macros/: Cargo.toml
3rd-github/idalib/idalib-macros/src/: lib.rs
3rd-github/idalib/idalib-sys/: Cargo.toml  build.rs
3rd-github/idalib/idalib-sys/src/: hexrays_extras.h  kernwin_extras.h  lib.rs  platform.rs  plugin_extras.h
3rd-github/idalib/idalib/src/: idb.rs  lib.rs
3rd-github/idalib/idalib/src/plugin/: mod.rs  plugmod.rs
docs/: BUILDING.md
scripts/: install.sh
skill/: SKILL.md
skill/references/: cli-tool-reference.md  obfuscation-triage.md
skill/scripts/: vm_devirt.py
src/: disasm.rs  federation.rs  idat_compat.rs  main.rs  rpc_dispatch.rs  tool_registry.rs
src/cli/: mod.rs
src/ida/: backend.rs  loop_impl.rs  request.rs  worker.rs  worker_trait.rs
src/ida/handlers/: analysis.rs  annotations.rs  database.rs  disasm.rs  functions.rs  memory.rs  script.rs  structs.rs  types.rs
src/ida/handlers/debug/: breakpoint.rs  execution.rs  inspect.rs  process.rs
src/router/: mod.rs
src/server/: mod.rs  requests.rs  socket_listener.rs
tests/: ida_e2e.rs
